# swagger.json
@@ -1,73 +1,56 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Users Api",
-    "description": "Users Api",
+    "title": "Users API",
+    "description": "Users API",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "schemes": [
-    "http",
-    "https"
-  ],
+  "schemes": ["http", "https"],
   "paths": {
     "/api/books": {
       "get": {
-        "tags": [
-          "Books"
-        ],
+        "tags": ["Books"],
+        "summary": "Get all books",
         "description": "",
+        "produces": ["application/json"],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "OK" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "post": {
-        "tags": [
-          "Books"
-        ],
+        "tags": ["Books"],
+        "summary": "Create a new book",
         "description": "",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "authorId": {
-                  "example": "any"
-                },
-                "isbn": {
-                  "example": "any"
-                }
+                "title": { "type": "string", "example": "Book Title" },
+                "authorId": { "type": "string", "example": "12345" },
+                "isbn": { "type": "string", "example": "9781234567890" }
               }
             }
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          }
+          "201": { "description": "Created" },
+          "400": { "description": "Bad Request" }
         }
       }
     },
     "/api/books/{id}": {
       "get": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
+        "tags": ["Books"],
+        "summary": "Get a book by ID",
         "parameters": [
           {
             "name": "id",
@@ -76,23 +59,17 @@
             "type": "string"
           }
         ],
+        "produces": ["application/json"],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" }
         }
       },
       "put": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
+        "tags": ["Books"],
+        "summary": "Update a book",
+        "consumes": ["application/json"],
         "parameters": [
           {
             "name": "id",
@@ -103,39 +80,26 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
-                  "example": "any"
-                },
-                "authorId": {
-                  "example": "any"
-                },
-                "isbn": {
-                  "example": "any"
-                }
+                "title": { "type": "string", "example": "Updated Title" },
+                "authorId": { "type": "string", "example": "54321" },
+                "isbn": { "type": "string", "example": "9780987654321" }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" }
         }
       },
       "delete": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
+        "tags": ["Books"],
+        "summary": "Delete a book",
         "parameters": [
           {
             "name": "id",
@@ -145,154 +109,107 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" }
         }
       }
     },
     "/api/authors": {
       "get": {
-        "tags": [
-          "Author"
-        ],
+        "tags": ["Author"],
         "summary": "Get all authors",
-        "description": "",
+        "produces": ["application/json"],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
+          "200": { "description": "OK" },
+          "500": { "description": "Internal Server Error" }
         }
       },
       "post": {
-        "tags": [
-          "Author"
-        ],
-        "summary": "Post an authors",
-        "description": "",
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
+        "tags": ["Author"],
+        "summary": "Create a new author",
+        "consumes": ["application/json"],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": { "type": "string", "example": "Author Name" }
+              }
+            }
           }
+        ],
+        "responses": {
+          "201": { "description": "Created" },
+          "400": { "description": "Bad Request" }
         }
       }
     },
     "/api/authors/{id}": {
       "get": {
-        "tags": [
-          "Author"
-        ],
+        "tags": ["Author"],
         "summary": "Get an author by ID",
-        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Author ID"
+            "type": "string"
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" }
         }
       },
       "put": {
-        "tags": [
-          "Author"
-        ],
+        "tags": ["Author"],
         "summary": "Update an author",
-        "description": "",
+        "consumes": ["application/json"],
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Author ID"
+            "type": "string"
           },
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                }
+                "name": { "type": "string", "example": "Updated Name" }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" }
         }
       },
       "delete": {
-        "tags": [
-          "Author"
-        ],
+        "tags": ["Author"],
         "summary": "Delete an author",
-        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Author ID"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                }
-              }
-            }
+            "type": "string"
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
+          "200": { "description": "OK" },
+          "400": { "description": "Bad Request" },
+          "404": { "description": "Not Found" }
         }
       }
     }
